@@ -1,6 +1,8 @@
 package com.matchFit.post.dto.response;
 
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 import com.matchFit.post.entity.Post;
 
@@ -19,18 +21,21 @@ public class GetPost {
     private String town;
     private Integer maxPeople;
     private String gender;
+    private Long viewCount; // 게시글 조회수
 
-	public static List<GetPost> from(List<Post> posts) {
+	public static List<GetPost> from(List<Post> posts, Map<Long, Long> viewCounts) {
 		return posts.stream()
-			.map(post -> new GetPost(
-				post.getTitle(), 
-				post.getSports().getLabel(), 
-				post.getDate().toString(),
-				post.getStatus().getLabel(), 
-				post.getTown().getLabel(), 
-				post.getMaxPeople(), 
-				post.getGender().getLabel()))
-				.toList();
+	            .map(post -> new GetPost(
+	                post.getTitle(),
+	                post.getSports().getLabel(),
+	                post.getDate().toString(),
+	                post.getStatus().getLabel(),
+	                post.getTown().getLabel(),
+	                post.getMaxPeople(),
+	                post.getGender().getLabel(),
+	                viewCounts.getOrDefault(post.getId(), 0L)
+	            ))
+	            .collect(Collectors.toList());
 		}
 
 }
